--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>This is a test!</p>
+    <p>This is a test!!!</p>
+    <p>Lab 2 - Wyatt Kirschner - 200407722</p>
 </div>
